--- a/run.config.json
+++ b/run.config.json
@@ -1,10 +1,10 @@
 {
-"java_path" : "/usr/lib/jvm/java-1.8.0-openjdk-amd64/bin/java",
+"java_path" : "/usr/bin/java",
 "java_options" : "-Xss256M -Xms1024M -Xmx4G -Xshare:off -Dfile.encoding=UTF-8",
 
-"evacsim_dir" : "/home/lzx/git/doe-mets-r2/EvacSim/",
-"groovy_dir" : "/mnt/Yinzi/doe_test/eclipse/plugins/org.codehaus.groovy_2.4.17.v201906292136-e1906-RELEASE/",
-"repast_plugin_dir" : "/mnt/Yinzi/doe_test/eclipse/plugins/repast.simphony.runtime_2.7.0/",
+"evacsim_dir" : "/home/umni2/a/umnilab/projects/DOE_METSR/instance0/master/EvacSim/",
+"groovy_dir" : "/home/umni2/a/umnilab/apps/Eclipse/plugins/org.codehaus.groovy_2.4.17.v201906292136-e1906-RELEASE/",
+"repast_plugin_dir" : "/home/umni2/a/umnilab/apps/Eclipse/plugins/repast.simphony.runtime_2.7.0/",
 
 "num_sim_instances" : "2",
 "socket_port_numbers" : ["42629","43109"]
