--- a/run.config.scenario.json
+++ b/run.config.scenario.json
@@ -1,10 +1,10 @@
 {
 "java_path" : "/usr/bin/java",
 "java_options" : "-Xss256M -Xms1024M -Xmx4G -Xshare:off -Dfile.encoding=UTF-8",
-"addsevs_dir" : "/home/umni2/a/umnilab/projects/DOE_METSR/METSR_FINAL/ADDSEVS/ADDSEVS/ADDSEVS/",
+"addsevs_dir" : "/home/umni2/a/umnilab/projects/DOE_METSR/METSR_FINAL/ADDSEVS/METS-R_ADDSEVS/ADDSEVS/",
 "groovy_dir" : "/home/umni2/a/umnilab/apps/Eclipse/plugins/org.codehaus.groovy_2.4.17.v201906292136-e1906-RELEASE/",
 "repast_plugin_dir" : "/home/umni2/a/umnilab/apps/Eclipse/plugins/repast.simphony.runtime_2.7.0/",
 "charger_plan" : "L_0_120000.csv",
-"num_sim_instances" : "2",
-"socket_port_numbers" : ["42629","43109"]
+"num_sim_instances" : "1",
+"socket_port_numbers" : "42629"
 }
