--- a/run.config.scenario.json
+++ b/run.config.scenario.json
@@ -1,10 +1,12 @@
 {
-"java_path" : "/usr/lib/jvm/java-1.8.0-openjdk-amd64",
+"java_path" : "C:/Program Files/Java/jdk1.8.0_301/bin/javaw",
 "java_options" : "-Xss256M -Xms1024M -Xmx4G -Xshare:off -Dfile.encoding=UTF-8",
-"addsevs_dir" : "/mnt/c/Users/User/git/METS-R_SIM/",
-"groovy_dir" : "/mnt/c/Users/User/RepastSimphony-2.6/eclipse/plugins/org.codehaus.groovy_2.4.15.xx-201810221923-e49-RELEASE/",
-"repast_plugin_dir" : "/mnt/c/Users/User/RepastSimphony-2.6/eclipse/plugins/repast.simphony.runtime_2.6.0/",
+"sim_dir" : "C:/Users/User/git/METS-R_SIM/METS_R/",
+"groovy_dir" : "C:/Users/User/RepastSimphony-2.6/eclipse/plugins/org.codehaus.groovy_2.4.15.xx-201810221923-e49-RELEASE/",
+"repast_plugin_dir" : "C:/Users/User/RepastSimphony-2.6/eclipse/plugins/repast.simphony.runtime_2.6.0/",
 "charger_plan" : "L_0_120000.csv",
 "num_sim_instances" : "1",
 "socket_port_numbers" : "42629"
 }
+
+
