--- a/run.config.scenario.json
+++ b/run.config.scenario.json
@@ -5,8 +5,8 @@
 "groovy_dir" : "C:/Users/User/RepastSimphony-2.6/eclipse/plugins/org.codehaus.groovy_2.4.15.xx-201810221923-e49-RELEASE/",
 "repast_plugin_dir" : "C:/Users/User/RepastSimphony-2.6/eclipse/plugins/repast.simphony.runtime_2.6.0/",
 "charger_plan" : "L_0_120000.csv",
-"num_sim_instances" : "1",
-"socket_port_numbers" : "42629"
+"num_sim_instances" : "5",
+"random_seeds": ["42", "5", "108", "22", "1006"]
 }
 
 
