--- a/run.config.scenario.json
+++ b/run.config.scenario.json
@@ -2,11 +2,19 @@
 "java_path" : "C:/Program Files/Java/jdk1.8.0_301/bin/javaw",
 "java_options" : "-Xss256M -Xms1024M -Xmx4G -Xshare:off -Dfile.encoding=UTF-8",
 "sim_dir" : "C:/Users/User/git/METS-R_SIM/METS_R/",
-"groovy_dir" : "C:/Users/User/RepastSimphony-2.6/eclipse/plugins/org.codehaus.groovy_2.4.15.xx-201810221923-e49-RELEASE/",
-"repast_plugin_dir" : "C:/Users/User/RepastSimphony-2.6/eclipse/plugins/repast.simphony.runtime_2.6.0/",
+"groovy_dir" : "C:/Users/User/RepastSimphony-2.7/eclipse/plugins/org.codehaus.groovy_2.4.17.v201906292136-e1906-RELEASE/",
+"repast_plugin_dir" : "C:/Users/User/RepastSimphony-2.7/eclipse/plugins/repast.simphony.runtime_2.7.0/",
 "charger_plan" : "L_0_120000.csv",
-"num_sim_instances" : "5",
-"random_seeds": ["42", "5", "108", "22", "1006"]
+"num_sim_instances" : "1",
+"random_seeds": ["42"],
+"full_network": "false",
+"full_demand": "false",
+"demand_diffusion": "false",
+"sim_passenger": "true",
+"sim_hour": "30",
+"sim_step_size": "0.3",
+"num_threads":"8",
+"demand_factor":"1.0"
 }
 
 
