--- a/run.config.scenario_ubuntu.json
+++ b/run.config.scenario_ubuntu.json
@@ -1,8 +1,8 @@
 {
-"java_path" : "C:/Program Files/Java/jdk1.8.0_202/bin/",
-"java_options" : "-Xss256M -Xms1024M -Xmx4G",
-"sim_dir" : "C:/Users/ALei/git/METS-R_SIM/METS_R/",
-"repast_plugin_dir" : "C:/Users/ALei/RepastSimphony-2.7/eclipse/plugins/",
+"java_path" : "/mnt/c/Program Files/Java/jdk1.8.0_202/bin/",
+"java_options" : "-Xss256M -Xms1024M -Xmx4G -Xshare:off -Dfile.encoding=UTF-8",
+"sim_dir" : "/mnt/c/Users/ALei/git/METS-R_SIM/METS_R/",
+"repast_plugin_dir" : "/mnt/c/Users/ALei/RepastSimphony-2.7/eclipse/plugins/",
 "charger_plan" : "L_0_120000.csv",
 "num_sim_instances" : "1",
 "random_seeds": ["42"],
