Added the security example

--- a/data/Data.properties.Template
+++ b/data/Data.properties.Template
@@ -53,7 +53,7 @@ LANES_CSV = data/NYC/facility/road/lane_fileNYC.csv
 NETWORK_FILE = 
 
 ZONES_SHAPEFILE = data/NYC/facility/zone/zone_centroid.shp
-ZONE_CSV = data/NYC/facility/zone/zone_fileNYC_capacity.csv
+ZONES_CSV = data/NYC/facility/zone/zone_fileNYC_capacity.csv
 CHARGER_SHAPEFILE = data/NYC/facility/charging_station/L_0_120000.shp
 CHARGER_CSV = data/NYC/facility/charging_station/L_0_120000.csv
 
